# babelbye

./: .gitignore  README.md
.cursor/rules/: guidelines.md
.cursor/rules/backend/: architecture.md
.cursor/rules/frontend/: architecture.md
.cursor/rules/infra/: architecture.md
.cursor/skills/auth0-integration/: SKILL.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: auth.rs  config.rs  main.rs
backend/src/adapters/: github_feedback_adapter.rs  libretranslate_adapter.rs  mock_feedback_adapter.rs  mock_translation_adapter.rs  mod.rs  openai_translation_adapter.rs  postgres_connection_repo.rs  postgres_message_repo.rs  postgres_user_repo.rs
backend/src/delivery/: mod.rs
backend/src/domain/: connection.rs  message.rs  mod.rs  user.rs
backend/src/ports/: mod.rs
backend/src/use_cases/: mod.rs
changelogs/: 2026-01-17-add-gitignore.md  2026-01-17-add-readme.md  2026-01-17-architecture-rules.md  2026-01-17-auth0-auth.md  2026-01-17-backend-auth0.md  2026-01-17-backend-cleanup.md  2026-01-17-backend-ws-translation.md  2026-01-17-ci-workflows.md  2026-01-17-docs-runbook.md  2026-01-17-foundation-structure.md  2026-01-17-frontend-cache.md  2026-01-17-frontend-core.md  2026-01-17-implement-babelbye-app.md  2026-01-17-infra-compose.md  2026-01-17-mcp-tooling-rules.md  2026-01-17-openai-translation.md  2026-01-17-update-architecture-rules.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  api.ts  db.ts  styles.css  types.ts
infra/: docker-compose.yml  env.example
